export all the device to file system

--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -10,3 +10,6 @@
     {{ device.productId }}
   </p>
 </div>
+<div style="margin-top: 20px">
+  <button (click)="export()">Export To Desktop</button>
+</div>
